--- a/local/docker-compose.yaml
+++ b/local/docker-compose.yaml
@@ -1,1 +1,25 @@
 services:
+  hadoop-master-node:
+    image: nph/spark-hadoop
+    container_name: hadoop-master-node
+    environment:
+      - HDFS_NODE_TYPE: namenode
+      - YARN_NODE_TYPE: resourcemanager
+  hadoop-worker-node-1:
+    image: nph/spark-hadoop
+    container_name: hadoop-worker-node-1
+    environment:
+      - HDFS_NODE_TYPE: datanode
+      - YARN_NODE_TYPE: nodemanager
+  hadoop-worker-node-2:
+    image: nph/spark-hadoop
+    container_name: hadoop-worker-node-2
+    environment:
+      - HDFS_NODE_TYPE: datanode
+      - YARN_NODE_TYPE: nodemanager
+  hadoop-worker-node-3:
+    image: nph/spark-hadoop
+    container_name: hadoop-worker-node-3
+    environment:
+      - HDFS_NODE_TYPE: datanode
+      - YARN_NODE_TYPE: nodemanager
